# ccFenics-plugin

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.lab.yml  dolfinx-assistant-v2.plugin  dolfinx-assistant.plugin  plugin-mcp-audit.md  pyproject.toml
.claude/: settings.json
.claude/agents/: boundary-condition-setup.md  fem-solver.md  mesh-quality.md
.claude/commands/: add-tool.md  check-contracts.md  run-tests.md  solve-poisson.md  tutorial-chapter.md
.claude/skills/fem-debugging/: SKILL.md
.claude/skills/fem-solver-selection/: SKILL.md
.claude/skills/fem-workflow-adaptive-refinement/: SKILL.md
.claude/skills/fem-workflow-axisymmetric/: SKILL.md
.claude/skills/fem-workflow-biharmonic/: SKILL.md
.claude/skills/fem-workflow-cahn-hilliard/: SKILL.md
.claude/skills/fem-workflow-complex-poisson/: SKILL.md
.claude/skills/fem-workflow-custom-newton/: SKILL.md
.claude/skills/fem-workflow-discrete-ops/: SKILL.md
.claude/skills/fem-workflow-elasticity/: SKILL.md
.claude/skills/fem-workflow-electromagnetics/: SKILL.md
.claude/skills/fem-workflow-functionals/: SKILL.md
.claude/skills/fem-workflow-helmholtz/: SKILL.md
.claude/skills/fem-workflow-hyperelasticity/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  codeql2.yml
.outline/specs/: session_state.qnt
ccfenics/: .mcp.json  manifest.json  run-server.sh
ccfenics/.claude-plugin/: plugin.json
ccfenics/agents/: convergence-study.md  nonlinear-solver.md  time-dependent-solver.md
ccfenics/commands/: run-tests.md  verify-installation.md
ccfenics/hooks/: hooks.json
dolfinx-assistant/: README.md
dolfinx-assistant/.claude-plugin/: plugin.json
dolfinx-assistant/agents/: debugging-assistant.md  formulation-architect.md  parametric-study.md  post-processor.md  simulation-designer.md  solver-optimizer.md
dolfinx-assistant/commands/: check-mesh.md  compare-solutions.md  compose-form.md  couple-domains.md  diagnose.md  explain-assembly.md  export-results.md  import-mesh.md  mpi-setup.md  newton-loop.md  parametric-sweep.md  recipe.md  run-convergence.md  setup-axisym.md  setup-bc-advanced.md  setup-dg.md  setup-matrix-free.md  setup-mms.md  sim-report.md  sim-setup.md  solve-pde.md  tutorial.md
dolfinx-assistant/hooks/: hooks.json
examples/: 3d_poisson_demo.ipynb  production_readiness.py
scripts/: run-docker-tests.sh
src/dolfinx_mcp/: __init__.py  __main__.py  _app.py  errors.py  eval_helpers.py  logging_config.py  server.py  session.py  ufl_context.py  utils.py
src/dolfinx_mcp/tools/: __init__.py  (+8 more)
src/dolfinx_mcp_jupyter/: __init__.py  config.py  connection.py  display.py  magics.py
tests/: conftest.py  strategies.py  test_cli.py  test_contracts.py  test_cowork_fixes.py  test_edge_case_contracts.py  test_errors.py  test_jupyter_config.py  test_jupyter_connection.py  test_jupyter_display.py  test_jupyter_magics.py  test_logging_config.py  test_poisson_workflow.py  test_property_invariants.py  test_runtime_contracts.py  test_session.py  test_solve_nonlinear.py  test_tutorial_workflows.py  test_ufl_context.py  test_workspace_tools.py
(+95 files in other folders)
