[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dolfinx-mcp"
version = "0.1.13"
description = "MCP server for FEniCSx/DOLFINx finite element computing"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
]

[project.scripts]
dolfinx-mcp = "dolfinx_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dolfinx_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
