[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dolfinx-mcp"
version = "0.9.0"
description = "MCP server for FEniCSx/DOLFINx finite element computing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "DOLFINx MCP Contributors" },
]
keywords = ["mcp", "dolfinx", "fenics", "finite-element", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
]

[project.urls]
Repository = "https://github.com/estanley/ccFenics-plugin"
Changelog = "https://github.com/estanley/ccFenics-plugin/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
]
jupyter = [
    "ipython>=8.0",
    "nest-asyncio>=1.5",
    "mcp>=1.2.0",
]

[project.scripts]
dolfinx-mcp = "dolfinx_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dolfinx_mcp", "src/dolfinx_mcp_jupyter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "B008",    # FastMCP tool signatures use ctx: Context = None sentinel
    "SIM102",  # Preserve if __debug__: if condition: guard pattern for clarity
    "SIM117",  # Nested with blocks more readable for multi-line context managers
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src/dolfinx_mcp"]
exclude = ["tests", "examples", "src/dolfinx_mcp/tools"]
reportMissingTypeStubs = "warning"
reportUnknownParameterType = "warning"
reportMissingImports = false
reportUnnecessaryTypeIgnoreComment = true

[tool.coverage.run]
source = ["dolfinx_mcp"]
omit = [
    "*/tools/*",
    "*/__main__.py",
    "*/server.py",
    "*/resources/*",
    "*/prompts/*",
    "*/utils.py",
    "*/eval_helpers.py",
    "*/ufl_context.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __debug__:",
]
